--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "next": "13.0.2",
+    "next-seo": "^5.14.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.8.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.2"
   }
 }
